klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/UnsupportedAssociationEndSignatureErrorTest.klass
package dummy

class DummyClass
{
    id: Long id key;
    associationEndSignature: DummyClass[0..1];
}
